avoid additional homepage white space

--- a/wp-content/themes/assist-trust/style.css
+++ b/wp-content/themes/assist-trust/style.css
@@ -41,7 +41,6 @@ p {
 h1 {
   font-size: 1.25rem;
   font-weight: bold;
-  margin-bottom: 1rem;
 }
 
 h2, h3 {
